src/objects/Indirect_Order__c.object
<CustomObject>
    <description>Used to capture inbound orders from EMC (and eventually other partners)</description>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderNumber__c</fullName>
        <description>Sales Order Number from XML</description>
        <externalId>true</externalId>
        <label>SalesOrderNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Errored</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XML__c</fullName>
        <label>XML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Indirect Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>Contract_Number__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Errored_Indirect_Orders</fullName>
        <columns>NAME</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Errored</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <label>Errored Indirect Orders</label>
    </listViews>
    <listViews>
        <fullName>Received_Indirect_Orders</fullName>
        <columns>NAME</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <label>Received Indirect Orders</label>
    </listViews>
    <listViews>
        <fullName>ShipConfirm_Responses</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed,Rejected</value>
        </filters>
        <label>Ship Confirmation Responses</label>
    </listViews>
    <listViews>
        <fullName>Shipped_Indirect_Orders</fullName>
        <columns>NAME</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Shipped</value>
        </filters>
        <label>Shipped Indirect Orders</label>
    </listViews>
    <nameField>
        <displayFormat>IO-{000000}</displayFormat>
        <label>Indirect Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indirect Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>